--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "circle-animation",
 	"version": "1.0.0",
 	"description": "",
-	"main": "app.js",
+	"browserslist": "> 0.5%, last 2 versions, not dead",
 	"scripts": {
 		"start": "parcel index.html --open",
 		"build": "parcel build index.html --public-url ./"
@@ -19,7 +19,7 @@
 	"homepage": "https://github.com/morganfula/circle-animation#readme",
 	"devDependencies": {
 		"cssnano": "^5.1.13",
-		"parcel-bundler": "^1.12.5",
+		"parcel": "^2.7.0",
 		"postcss": "^8.4.18"
 	}
 }
